--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   cloud_firestore:
   date_field:
 
+  flutter_localizations: # Add this line
+    sdk: flutter         # Add this line
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
